--- a/style.css
+++ b/style.css
@@ -1,9 +1,4 @@
-body {
-  /* Body will "peekaboo" with colour on mobile */
-  background: rgb(215,130,126);
-  background: linear-gradient(47deg, rgba(215,130,126,1) 0%, rgba(40,105,131,1) 100%);
-  margin: 0;
-}
+body { margin: 0; }
 
 .book {
   /* Book takes up the full screen */
@@ -17,9 +12,18 @@ body {
 }
 
 /* Pages alternate in colour, and are low contrast */
-.page { color: #575279; }
-.page:nth-child(odd) { background-color: #faf4ed; }
-.page:nth-child(even) { background-color: #f2e9e1; }
+.page {
+  color: #575279;
+  background: linear-gradient(47deg, rgba(242,233,225,1) 0%, rgba(255,250,243,1) 100%);
+}
+body { background-color: #907aa9; } /* peekaboo */
+@media (prefers-color-scheme: dark) {
+  .page {
+    color: #e0def4;
+    background: linear-gradient(47deg, rgba(38,35,58,1) 0%, rgba(25,23,36,1) 100%);
+  }
+  body { background-color: #c4a7e7; } /* peekaboo */
+}
 
 .page {
   /* Page contains text with padding, and padding doesn't count towards height/width */
